--- a/views/index.html
+++ b/views/index.html
@@ -1,3 +1,10 @@
+<html>
+<head>
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+</head>
+<body>
+
 <h1>Listing Logins</h1>
 
 <table>
@@ -17,3 +24,6 @@
 
   </tbody>
 </table>
+
+</body>
+</html>
