--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,7 @@
 
 <h1>Listing Logins</h1>
 
-<table>
+<table class="table table-striped">
   <thead>
     <th>Remote Addr</th>
     <th>Username</th>
