--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
 <h3>API</h3>
 
 
-<h4>GET /api/ssh_logins.json</h4>
+<h4>GET <a href="/api/ssh_logins.json">/api/ssh_logins.json</a></h4>
 
 <p>
 API to retrieve a list of login attempts, 50 per page.
