Tiny typo on homepage

--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
 
 <h3>About</h3>
 <div class="well">
-  <a href="http://sshpot.com/">SSHPot.com</a> is a <a href="https://github.com/joshrendek/sshpot-com">open-source</a> web service for receiving data from ssh-pot daemon's, which act as a honeypot for ssh login attempts and records all user/password combinations along with the remote address. In order to run the daemon you must configure OpenSSH to run on a different port and let the honeypot run on port 22.
+  <a href="http://sshpot.com/">SSHPot.com</a> is a <a href="https://github.com/joshrendek/sshpot-com">open-source</a> web service for receiving data from ssh-pot daemons, which act as a honeypot for ssh login attempts and records all user/password combinations along with the remote address. In order to run the daemon you must configure OpenSSH to run on a different port and let the honeypot run on port 22.
 </div>
 
 <hr>
