add server list and organize files

--- a/views/header.html
+++ b/views/header.html
@@ -36,6 +36,7 @@ body {
         <li><a href="/#api">API</a></li>
         <li><a href="/#last25">Last 25</a></li>
         <li><a href="/join">Run Your Own Daemon</a></li>
+        <li><a href="/honeypot-servers">Servers</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
       </ul>
