update website title

--- a/views/header.html
+++ b/views/header.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>SSHPot.com</title>
+<title>SSHPot.com - Open Source SSH Honeypot</title>
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 <style type="text/css">
