--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,6 +9,15 @@ html
     == javascript_include_tag "https://www.google.com/jsapi", "chartkick"
     == javascript_include_tag 'application'
     == csrf_meta_tags
+    javascript:
+      | (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      | (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      | m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      | })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      | ga('create', 'UA-3754808-30', 'auto');
+      | ga('send', 'pageview');
+
   body
     header
       == render 'layouts/navigation'
