--- a/app/views/http_requests/_latest.html.slim
+++ b/app/views/http_requests/_latest.html.slim
@@ -7,7 +7,7 @@ table.table.table-striped.table-condensed
   tbody
     - requests.each do |req|
       tr
-        td = link_to req.login.username, logins_path(username: req.login.username)
-        td = link_to req.login.remote_addr, logins_path(ip: req.login.remote_addr)
+        td = link_to req.login.try(:username), logins_path(username: req.login.try(:username))
+        td = link_to req.login.try(:remote_addr), logins_path(ip: req.login.try(:remote_addr)
         td = req.url
         td = req.created_at.strftime("%Y/%m/%d %H:%M")
