--- a/app/views/logins/_latest.html.slim
+++ b/app/views/logins/_latest.html.slim
@@ -1,6 +1,8 @@
 .container
   .row
     .col-lg-6
+      h3 Top 10 Attackers
+      = render 'login_counter/top', logins: LoginCount.top
       h3 Latest 25 Logins
       = render 'logins/list', logins: Login.latest
     .col-lg-6
